@@ -14,8 +14,11 @@ import jakarta.annotation.PostConstruct;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.util.LinkedMultiValueMap;
@@ -27,15 +30,22 @@ import org.springframework.web.client.RestClientResponseException;
 @Component
 public class NobitexMarketClient implements ExchangeMarketClient {
 
+  private static final Locale LOCALE = Locale.ROOT;
+
+  private static final String EXCHANGE = "NOBITEX";
+  private static final String ACCOUNT = "Nobitex";
+
+  private static final String PATH_WALLET_BALANCE = "/users/wallets/balance";
+  private static final String PATH_STATS = "/market/stats";
+  private static final String PATH_ORDER_ADD = "/market/orders/add";
+  private static final String PATH_ORDER_UPDATE_STATUS = "/market/orders/update-status";
+
   private final CurrencyExchangeRepository currencyExchangeRepository;
   private final ExchangeAccessService exchangeAccessService;
-  private final NobitexClients clients;
+  private final NobitexClients nobitexClients;
 
-  private RestClient pub;
-  private RestClient prv;
-
-  private final String EXCHANGE = "NOBITEX";
-  private final String ACCOUNT = "Nobitex";
+  private RestClient publicClient;
+  private RestClient privateClient;
 
   public NobitexMarketClient(
       CurrencyExchangeRepository currencyExchangeRepository,
@@ -43,34 +53,33 @@ public class NobitexMarketClient implements ExchangeMarketClient {
       NobitexClients clients) {
     this.currencyExchangeRepository = currencyExchangeRepository;
     this.exchangeAccessService = exchangeAccessService;
-    this.clients = clients;
+    this.nobitexClients = clients;
   }
 
   @PostConstruct
   void init() {
     Exchange ex = exchangeAccessService.requireExchange(EXCHANGE);
     ExchangeAccount acc = exchangeAccessService.requireAccount(EXCHANGE, ACCOUNT);
-    this.pub = clients.publicClient(ex);
-    this.prv = clients.privateClient(ex, acc);
+    this.publicClient = nobitexClients.publicClient(ex);
+    this.privateClient = nobitexClients.privateClient(ex, acc);
+  }
+
+  @Override
+  public String getExchangeName() {
+    return EXCHANGE;
   }
 
   @Override
   public BigDecimal getWalletBalance(String currency) {
-    String c = currency.toLowerCase(Locale.ROOT);
+    String normalizedCurrency = normalize(currency, "currency");
     try {
       MultiValueMap<String, String> form = new LinkedMultiValueMap<>();
-      form.add("currency", c);
-      var resp =
-          prv.post()
-              .uri("/users/wallets/balance")
-              .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-              .accept(MediaType.APPLICATION_JSON)
-              .body(form)
-              .retrieve()
-              .body(java.util.Map.class);
-      Object bal = resp != null ? resp.get("balance") : null;
-      if (bal == null) throw new IllegalStateException("Empty balance");
-      return new BigDecimal(String.valueOf(bal));
+      form.add("currency", normalizedCurrency);
+      Map<String, Object> response =
+          postForm(privateClient, PATH_WALLET_BALANCE, form, Map.class, MediaType.APPLICATION_JSON);
+      Object balance = response.get("balance");
+      if (balance == null) throw new IllegalStateException("Empty balance");
+      return new BigDecimal(String.valueOf(balance));
     } catch (RestClientResponseException http) {
       throw http;
     }
@@ -78,8 +87,8 @@ public class NobitexMarketClient implements ExchangeMarketClient {
 
   @Override
   public List<Quote> getQuotes() {
-    var entries = currencyExchangeRepository.findByExchange_Name(EXCHANGE);
-    if (entries == null || entries.isEmpty()) return List.of();
+    List<CurrencyExchange> entries = currencyExchangeRepository.findByExchange_Name(EXCHANGE);
+    if (entries == null || entries.isEmpty()) return Collections.emptyList();
 
     long ts = Instant.now().toEpochMilli();
     List<Quote> out = new ArrayList<>(entries.size());
@@ -99,21 +108,22 @@ public class NobitexMarketClient implements ExchangeMarketClient {
 
   private BigDecimal bestPrice(String base, String quote, String side) {
     try {
-      var resp =
-          pub.get()
+      Map<?, ?> resp =
+          publicClient
+              .get()
               .uri(
                   b ->
-                      b.path("/market/stats")
-                          .queryParam("srcCurrency", base.toLowerCase())
-                          .queryParam("dstCurrency", quote.toLowerCase())
+                      b.path(PATH_STATS)
+                          .queryParam("srcCurrency", base.toLowerCase(LOCALE))
+                          .queryParam("dstCurrency", quote.toLowerCase(LOCALE))
                           .build())
               .retrieve()
-              .body(java.util.Map.class);
+              .body(Map.class);
       if (resp == null || resp.get("stats") == null) return null;
-      java.util.Map<?, ?> stats = (java.util.Map<?, ?>) resp.get("stats");
-      String key = (base + "-" + quote).toLowerCase(Locale.ROOT);
+      Map<?, ?> stats = (Map<?, ?>) resp.get("stats");
+      String key = (base + "-" + quote).toLowerCase(LOCALE);
       Object entry = stats.get(key);
-      if (!(entry instanceof java.util.Map)) {
+      if (!(entry instanceof Map)) {
         for (var e : stats.entrySet()) {
           if (String.valueOf(e.getKey()).equalsIgnoreCase(key)) {
             entry = e.getValue();
@@ -121,8 +131,8 @@ public class NobitexMarketClient implements ExchangeMarketClient {
           }
         }
       }
-      if (!(entry instanceof java.util.Map)) return null;
-      java.util.Map<?, ?> s = (java.util.Map<?, ?>) entry;
+      if (!(entry instanceof Map)) return null;
+      Map<?, ?> s = (Map<?, ?>) entry;
       Object price = "sell".equals(side) ? s.get("bestSell") : s.get("bestBuy");
       return price == null ? null : new BigDecimal(String.valueOf(price));
     } catch (RestClientResponseException http) {
@@ -133,13 +143,13 @@ public class NobitexMarketClient implements ExchangeMarketClient {
   @Override
   public OrderAck submitOrder(OrderRequest r) {
     try {
-      String pair = r.getSymbol().toLowerCase(Locale.ROOT);
+      String pair = normalize(r.getSymbol(), "symbol");
       String[] parts = pair.split("[-_]");
       if (parts.length != 2) throw new IllegalArgumentException("symbol must be like 'btc-usdt'");
       String src = parts[0], dst = parts[1];
 
       MultiValueMap<String, String> form = new LinkedMultiValueMap<>();
-      form.add("type", r.getSide().toLowerCase(Locale.ROOT));
+      form.add("type", normalize(r.getSide(), "side"));
       form.add("execution", "limit");
       form.add("srcCurrency", src);
       form.add("dstCurrency", dst);
@@ -147,17 +157,12 @@ public class NobitexMarketClient implements ExchangeMarketClient {
       form.add("price", r.getPrice().toPlainString());
       form.add("clientOrderId", defaultClientOrderId(r));
 
-      var resp =
-          prv.post()
-              .uri("/market/orders/add")
-              .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-              .body(form)
-              .retrieve()
-              .body(java.util.Map.class);
+      Map<String, Object> resp =
+          postForm(privateClient, PATH_ORDER_ADD, form, Map.class, MediaType.APPLICATION_JSON);
 
-      String status =
-          resp != null ? String.valueOf(resp.getOrDefault("status", "unknown")) : "unknown";
-      String orderId = resp != null ? String.valueOf(resp.get("orderId")) : null;
+      String status = String.valueOf(resp.getOrDefault("status", "unknown"));
+      Object orderIdObj = resp.get("orderId");
+      String orderId = orderIdObj != null ? String.valueOf(orderIdObj) : null;
       return new OrderAck(form.getFirst("clientOrderId"), orderId, status);
     } catch (RestClientResponseException http) {
       throw http;
@@ -172,16 +177,12 @@ public class NobitexMarketClient implements ExchangeMarketClient {
       if (orderId != null && orderId.matches("\\d+")) form.add("order", orderId);
       else form.add("clientOrderId", orderId);
 
-      var resp =
-          prv.post()
-              .uri("/market/orders/update-status")
-              .contentType(MediaType.APPLICATION_FORM_URLENCODED)
-              .body(form)
-              .retrieve()
-              .body(java.util.Map.class);
+      Map<String, Object> resp =
+          postForm(
+              privateClient, PATH_ORDER_UPDATE_STATUS, form, Map.class, MediaType.APPLICATION_JSON);
 
-      String status = resp != null ? String.valueOf(resp.get("status")) : null;
-      String updated = resp != null ? String.valueOf(resp.get("updatedStatus")) : null;
+      String status = (String) resp.get("status");
+      String updated = (String) resp.get("updatedStatus");
       return "ok".equalsIgnoreCase(status)
           || "canceled".equalsIgnoreCase(status)
           || "Canceled".equalsIgnoreCase(updated);
@@ -191,14 +192,37 @@ public class NobitexMarketClient implements ExchangeMarketClient {
   }
 
   private static String defaultClientOrderId(OrderRequest req) {
-    return ("CLI-" + req.getSymbol() + "-" + System.currentTimeMillis()).toUpperCase(Locale.ROOT);
+    return ("CLI-" + req.getSymbol() + "-" + System.currentTimeMillis()).toUpperCase(LOCALE);
   }
 
   private static String toSymbol(CurrencyExchange cx) {
     String exSym = cx.getExchangeSymbol();
-    if (StringUtils.hasText(exSym)) return exSym.toLowerCase(Locale.ROOT);
-    String base = cx.getCurrency().getSymbol().toLowerCase(Locale.ROOT);
+    if (StringUtils.hasText(exSym)) return exSym.toLowerCase(LOCALE);
+    String base = cx.getCurrency().getSymbol().toLowerCase(LOCALE);
     String quote = "usdt";
     return base + "-" + quote;
+  }
+
+  private static String normalize(String value, String fieldName) {
+    if (!StringUtils.hasText(value)) {
+      throw new IllegalArgumentException(fieldName + " must not be blank");
+    }
+    return value.toLowerCase(LOCALE);
+  }
+
+  private static <T> T postForm(
+      RestClient client,
+      String path,
+      MultiValueMap<String, String> form,
+      Class<T> responseType,
+      MediaType accept) {
+    Objects.requireNonNull(client, "client");
+    Objects.requireNonNull(path, "path");
+    RestClient.RequestBodySpec spec =
+        client.post().uri(path).contentType(MediaType.APPLICATION_FORM_URLENCODED);
+    if (accept != null) {
+      spec = spec.accept(accept);
+    }
+    return spec.body(form).retrieve().body(responseType);
   }
 }
